gcc/testsuite 	PR preprocessor/30786: 	* gcc.dg/cpp/pr30786.c: New file. libcpp 	PR preprocessor/30786: 	* macro.c (builtin_macro): Return result of _cpp_do__Pragma. 	* directives.c (_cpp_do__Pragma): Return error status. 	* internal.h (_cpp_do__Pragma): Update. 	* directives.c (get__Pragma_string): Back up if EOF seen.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@129800 138bc75d-0d04-0410-961f-82ee72b054a4